# AgenticLog

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LEIAME.md  PR-ci-github-actions.md  PR-empty-retrieval-test.md  PR-fix-agent-llm-import.md  PR-pytest-migration.md  PR-rag-unit-tests.md  agentic_rag_avk.py  app.py  app_avk.py  main_api.py  pyproject.toml  rag_avk.py  requirements-dev.txt  requirements.txt  testa_agentic_rag.py
.claude/: settings.json
.claude/agents/: backend-builder.md  codebase-researcher.md  frontend-builder.md  persistence-checker.md  spec-writer.md  story-writer.md  test-verifier.md  validator.md
.claude/skills/build-with-tests/: SKILL.md
.claude/skills/feature-factory/: SKILL.md
.claude/skills/git-workflow/: SKILL.md
.claude/skills/rag-pipeline-audit/: SKILL.md
.claude/skills/ship-feature/: SKILL.md
.cursor/rules/: Protocolo-de-Git-e-GitHub.md  documentacao-instalacao.mdc  github-rules.md  padrao_testes.md
.github/workflows/: ci.yml  test.yml
.specs/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.specs/features/: README.md
.specs/project/: PROJECT.md  ROADMAP.md  STATE.md
data/documents/: doc1.json  doc2.json  doc3.json
docs/: agentic-rag-explicacao.md  arquitetura-alvo-rag.md  convencoes-documentacao.md  leiame-conda.txt  leiame-pyenv.txt  pyproject-toml-explicacao.md  rag-variacoes.md
docs/adr/: ADR-005-remover-langchain-agents-usar-chain-direta.md  ADR-006-llm-timeout-60s.md  ADR-013-semantic-chunker.md  ADR-014-purga-orfaos-reset-por-colecao.md  ADR-015-guardrail-fail-loud-rebuild-retrieval.md  ADR-016-cosine-normalizacao-unificada.md  ADR-017-num-candidate-responses-geracao-unica.md  ADR-018-redesign-arquitetura-offline-online.md  ADR-019-reprojecao-atomicidade-upsert-fase3b.md
evals/: rag_golden.json
scripts/: pdf_to_json.py  rag_eval.py  rag_eval_metrics.py
src/agenticlog/: __init__.py  agent.py  api.py  config.py  health.py  history.py  rag.py
tests/: conftest.py  test_agent.py  test_agentic_rag.py  test_api.py  test_app.py  test_app_error_handler.py  test_config_env.py  test_health.py  test_history.py  test_observability_history.py  test_observability_logging.py  test_pdf_to_json.py  test_rag.py  test_rag_caracterizacao.py  test_rag_eval.py  test_rag_integration.py  test_shared_errors.py  test_streamlit_ui.py  testa_agentic_rag.py
tests/acceptance/: test_adicionar_pdf_incrementalmente.py  test_agent_workflow_integration.py  test_api_query_endpoint.py  test_document_ingestion_ui.py  test_health_check.py  test_history_endpoint.py  test_llm_provider_portability.py  test_load_env_credentials.py  test_modo_seguro_modelo_indisponivel.py  test_multi_collection_chromadb.py  test_portuguese_embedding_model.py  test_query_history_audit_logging.py  test_rag_ingestion_fase3a.py  test_rag_ingestion_fase3b.py  test_rag_retrieval_fase4.py  test_rag_serving_fase5.py  test_rag_shared_observability.py  test_retry_logic.py  test_semantic_chunking.py  test_streamlit_http_client.py  test_structured_log_config.py  test_unificar_metadados_chunks.py
tests/ingestion/: test_cleaning.py  test_embeddings.py  test_extraction.py  test_metadata.py  test_security.py  test_shims_identidade.py  test_store.py
(+86 files in other folders)
