[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agenticlog"
version = "0.1.0"
description = "Agentic RAG para logística e supply chain"
readme = "LEIAME.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26.4",
    "langgraph>=0.2.74",
]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = []
