[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agenticlog"
version = "0.1.0"
description = "Agentic RAG para logística e supply chain"
readme = "LEIAME.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26.4",
    "langgraph>=0.2.74",
]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*", "teste_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/agenticlog"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
show_missing = true
