[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agenticlog"
version = "0.1.0"
description = "Agentic RAG para logística e supply chain"
readme = "LEIAME.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26.4",
    "langgraph>=0.2.74",
]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*", "teste_*"]
addopts = "-v --tb=short"
markers = [
    "integration: testes que usam ChromaDB real (requerem hnswlib; pulados quando o .pyd nativo não carrega, ex. Smart App Control no Windows).",
    "rag_eval: testes do harness de avaliação RAG (scripts/rag_eval.py); rodam em invocação separada e ficam FORA de --cov=agenticlog.",
]
filterwarnings = [
    "ignore::DeprecationWarning:langchain_experimental",
]

[tool.coverage.run]
source = ["src/agenticlog"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "T20", "PGH"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"src/agenticlog/__init__.py" = ["E501"]
"src/agenticlog/rag.py" = ["E501", "I001", "B904"]
"src/agenticlog/ingestion/*.py" = ["E501", "B904"]
"src/agenticlog/agent.py" = ["E501"]
"src/agenticlog/config.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = false
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = ["agenticlog.rag", "agenticlog.api"]
ignore_errors = true

[tool.bandit]
targets = ["src/agenticlog"]
severity = "medium"
confidence = "medium"
